--- a/front/src/app/pages/shop/products/products.component.html
+++ b/front/src/app/pages/shop/products/products.component.html
@@ -1,154 +1,111 @@
-<div class="is-preload">
+<!-- Main -->
+<div id="main">
+  <!-- Banner -->
+  <!-- Note: The "styleN" class below should match that of the header element. -->
+  <section id="banner" class="style2">
+    <div class="inner">
+      <span class="image">
+        <img src="assets/images/pic07.jpg" alt="" />
+      </span>
+      <header class="major">
+        <h1>Landing</h1>
+      </header>
+      <div class="content">
+        <p>Lorem ipsum dolor sit amet nullam consequat<br />
+          sed veroeros. tempus adipiscing nulla.</p>
+      </div>
+    </div>
+  </section>
 
-  <!-- Wrapper -->
-  <div id="wrapper">
+  <!-- One -->
+  <section id="one">
+    <div class="inner">
+      <header class="major">
+        <h2>Sed amet aliquam</h2>
+      </header>
+      <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
+        condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem
+        ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et
+        orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem.
+        In efficitur ligula tate urna.</p>
+    </div>
+  </section>
 
-    <!-- Header -->
-    <!-- Note: The "styleN" class below should match that of the banner element. -->
-    <header id="header" class="alt style2">
-      <a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
-      <nav>
-        <a href="#menu">Menu</a>
-      </nav>
-    </header>
-
-    <!-- Menu -->
-    <nav id="menu">
-      <ul class="links">
-        <li><a href="../../../index.html">Home</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="../../../blog.html">Blog</a></li>
-        <li><a href="../../contact/form.html">Contact</a></li>
-      </ul>
-      <ul class="actions stacked">
-        <li><a href="#" class="button primary fit">Get Started</a></li>
-        <li><a href="#" class="button fit">Log In</a></li>
-      </ul>
-    </nav>
-
-    <!-- Banner -->
-    <!-- Note: The "styleN" class below should match that of the header element. -->
-    <section id="banner" class="style2">
-      <div class="inner">
-        <span class="image">
-          <img src="../../../images/pic07.jpg" alt="" />
-        </span>
-        <header class="major">
-          <h1>Landing</h1>
-        </header>
-        <div class="content">
-          <p>Lorem ipsum dolor sit amet nullam consequat<br />
-            sed veroeros. tempus adipiscing nulla.</p>
+  <!-- Two -->
+  <section id="two" class="spotlights">
+    <section>
+      <a href="#" class="image">
+        <img src="assets/images/pic08.jpg" alt="" data-position="center center" />
+      </a>
+      <div class="content">
+        <div class="inner">
+          <header class="major">
+            <h3>Orci maecenas</h3>
+          </header>
+          <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
+            condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
+            pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
+            sagittis tempus.</p>
+          <ul class="actions">
+            <li><a href="#" class="button">Learn more</a></li>
+          </ul>
         </div>
       </div>
     </section>
-
-    <!-- Main -->
-    <div id="main">
-
-      <!-- One -->
-      <section id="one">
+    <section>
+      <a href="#" class="image">
+        <img src="assets/images/pic09.jpg" alt="" data-position="top center" />
+      </a>
+      <div class="content">
         <div class="inner">
           <header class="major">
-            <h2>Sed amet aliquam</h2>
+            <h3>Rhoncus magna</h3>
           </header>
           <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
-            condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem
-            ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et
-            orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem.
-            In efficitur ligula tate urna.</p>
-        </div>
-      </section>
-
-      <!-- Two -->
-      <section id="two" class="spotlights">
-        <section>
-          <a href="../../../generic.html" class="image">
-            <img src="../../../images/pic08.jpg" alt="" data-position="center center" />
-          </a>
-          <div class="content">
-            <div class="inner">
-              <header class="major">
-                <h3>Orci maecenas</h3>
-              </header>
-              <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
-                condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
-                pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
-                sagittis tempus.</p>
-              <ul class="actions">
-                <li><a href="../../../generic.html" class="button">Learn more</a></li>
-              </ul>
-            </div>
-          </div>
-        </section>
-        <section>
-          <a href="../../../generic.html" class="image">
-            <img src="../../../images/pic09.jpg" alt="" data-position="top center" />
-          </a>
-          <div class="content">
-            <div class="inner">
-              <header class="major">
-                <h3>Rhoncus magna</h3>
-              </header>
-              <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
-                condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
-                pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
-                sagittis tempus.</p>
-              <ul class="actions">
-                <li><a href="../../../generic.html" class="button">Learn more</a></li>
-              </ul>
-            </div>
-          </div>
-        </section>
-        <section>
-          <a href="../../../generic.html" class="image">
-            <img src="../../../images/pic10.jpg" alt="" data-position="25% 25%" />
-          </a>
-          <div class="content">
-            <div class="inner">
-              <header class="major">
-                <h3>Sed nunc ligula</h3>
-              </header>
-              <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
-                condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
-                pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
-                sagittis tempus.</p>
-              <ul class="actions">
-                <li><a href="../../../generic.html" class="button">Learn more</a></li>
-              </ul>
-            </div>
-          </div>
-        </section>
-      </section>
-
-      <!-- Three -->
-      <section id="three">
-        <div class="inner">
-          <header class="major">
-            <h2>Massa libero</h2>
-          </header>
-          <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna
-            magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna.
-            Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem
-            consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus
-            amet pharetra et feugiat tempus.</p>
+            condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
+            pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
+            sagittis tempus.</p>
           <ul class="actions">
-            <li><a href="../../../generic.html" class="button next">Get Started</a></li>
+            <li><a href="#" class="button">Learn more</a></li>
           </ul>
         </div>
-      </section>
+      </div>
+    </section>
+    <section>
+      <a href="#" class="image">
+        <img src="assets/images/pic10.jpg" alt="" data-position="25% 25%" />
+      </a>
+      <div class="content">
+        <div class="inner">
+          <header class="major">
+            <h3>Sed nunc ligula</h3>
+          </header>
+          <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
+            condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
+            pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
+            sagittis tempus.</p>
+          <ul class="actions">
+            <li><a href="#" class="button">Learn more</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </section>
 
+  <!-- Three -->
+  <section id="three">
+    <div class="inner">
+      <header class="major">
+        <h2>Massa libero</h2>
+      </header>
+      <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna
+        magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna.
+        Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem
+        consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus
+        amet pharetra et feugiat tempus.</p>
+      <ul class="actions">
+        <li><a href="#" class="button next">Get Started</a></li>
+      </ul>
     </div>
-
-  </div>
-
-  <!-- Scripts -->
-  <script src="../../../assets/js/jquery.min.js"></script>
-  <script src="../../../assets/js/jquery.scrolly.min.js"></script>
-  <script src="../../../assets/js/jquery.scrollex.min.js"></script>
-  <script src="../../../assets/js/browser.min.js"></script>
-  <script src="../../../assets/js/breakpoints.min.js"></script>
-  <script src="../../../assets/js/util.js"></script>
-  <script src="../../../assets/js/main.js"></script>
-
+  </section>
 </div>
