--- a/front/src/app/pages/shop/shop.component.html
+++ b/front/src/app/pages/shop/shop.component.html
@@ -1,3 +1,46 @@
-<p>
-  shop works!
-</p>
+<!-- Main -->
+<section id="main">
+	<!-- Banner -->
+	<!-- Note: The "styleN" class below should match that of the header element. -->
+	<section id="banner" class="style2">
+		<div class="inner">
+			<span class="image">
+				<img src="assets/images/pic07.jpg" alt="" />
+			</span>
+			<header class="major">
+				<h1>Landing</h1>
+			</header>
+			<div class="content">
+				<p>Lorem ipsum dolor sit amet nullam consequat<br/>sed veroeros. tempus adipiscing nulla.</p>
+			</div>
+		</div>
+	</section>
+	
+	<!-- One -->
+	<section id="one">
+		<div class="inner">
+			<header class="major">
+				<h2>Sed amet aliquam</h2>
+			</header>
+			<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+		</div>
+	</section>
+	
+	<!-- Two -->
+	<section id="two" class="spotlights">
+		<app-product *ngFor="let product of products | async" [name]="product.name" [images]="product.images"></app-product>
+	</section>
+	
+	<!-- Three -->
+	<section id="three">
+		<div class="inner">
+			<header class="major">
+				<h2>Massa libero</h2>
+			</header>
+			<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+			<ul class="actions">
+				<li><a href="#" class="button next">Get Started</a></li>
+			</ul>
+		</div>
+	</section>
+</section>
