--- a/front/src/styles/sass/main.scss
+++ b/front/src/styles/sass/main.scss
@@ -2,7 +2,6 @@
 @import 'libs/functions';
 @import 'libs/mixins';
 @import 'libs/vendor';
-@import 'libs/breakpoints';
 @import 'libs/html-grid';
 @import '../css/font-awesome.min.css';
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic');
@@ -14,15 +13,7 @@
 */
 
 // Breakpoints.
-
-	@include breakpoints((
-		xlarge:    (1281px,   1680px   ),
-		large:     (981px,    1280px   ),
-		medium:    (737px,    980px    ),
-		small:     (481px,    736px    ),
-		xsmall:    (361px,    480px    ),
-		xxsmall:   (null,     360px    )
-	));
+@import './breakpoints';
 
 // Mixins.
 
