--- a/front/src/app/pages/shop/product/product.component.html
+++ b/front/src/app/pages/shop/product/product.component.html
@@ -8,7 +8,7 @@
 			<h3>{{product.name}}</h3>
 		</header>
 		<showdown [value]="product.summary"></showdown>
-		<p><em>Starts at {{ product.basePrice | currency:'€':true:'1.2-2'}}</em></p>
+		<p><em>Starts at {{ product.minimumPrice | currency:'€':'symbol':'1.2-2'}}</em></p>
 		<ul class="actions">
 			<li><a class="button" [routerLink]="[product.name]">Learn more</a></li>
 		</ul>
