feat:Added Cart Modal

--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -4,6 +4,8 @@ $pulse-rest: 2em;
 #cart-icon{
 	font-size: 1em;
 	position: relative;
+	box-shadow: none;
+	
 	
 	.icon:after {
 		background-color: #cccccc;
