--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -5,7 +5,7 @@
 		<header id="header" class="alt">
 			<a href="/index" class="logo"><strong>E-Make</strong> <span>by AZkali</span></a>
 			<nav>
-				<a href="#cart" id="cart-icon" [ngClass]="{pulse: cartFlash}"><span class="icon alt fa-shopping-cart" title="Cart"></span> {{(cartInfos | async).totalSum | currency:'€':'symbol':'1.2-2'}} ({{(cartInfos | async).totalCount}})</a>
+				<button (click)="openModal()" id="cart-icon" [ngClass]="{pulse: cartFlash}"><span class="icon alt fa-shopping-cart" title="Cart"></span> {{(cartInfos | async).totalSum | currency:'€':'symbol':'1.2-2'}} ({{(cartInfos | async).totalCount}})</button>
 				<a href="#menu" target="_self">Menu</a>
 			</nav>
 		</header>
