--- a/front/src/app/pages/shop/cart/cart.component.html
+++ b/front/src/app/pages/shop/cart/cart.component.html
@@ -1,47 +1,56 @@
-<h3>Table</h3>
+<div class="modal-header">
+	<h4 class="modal-title">Your Cart</h4>
+	<button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+		<span aria-hidden="true">&times;</span>
+	</button>
+</div>
 
-<h4>Default</h4>
-<div class="table-wrapper">
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Price</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Item1</td>
-        <td>Ante turpis integer aliquet porttitor.</td>
-        <td>29.99</td>
-      </tr>
-      <tr>
-        <td>Item2</td>
-        <td>Vis ac commodo adipiscing arcu aliquet.</td>
-        <td>19.99</td>
-      </tr>
-      <tr>
-        <td>Item3</td>
-        <td> Morbi faucibus arcu accumsan lorem.</td>
-        <td>29.99</td>
-      </tr>
-      <tr>
-        <td>Item4</td>
-        <td>Vitae integer tempus condimentum.</td>
-        <td>19.99</td>
-      </tr>
-      <tr>
-        <td>Item5</td>
-        <td>Ante turpis integer aliquet porttitor.</td>
-        <td>29.99</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td colspan="2"></td>
-        <td>100.00</td>
-      </tr>
-    </tfoot>
-  </table>
+<div class="modal-body">
+	<div class="table-wrapper">
+		<table>
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Description</th>
+					<th>Price</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Item1</td>
+					<td>Ante turpis integer aliquet porttitor.</td>
+					<td>29.99</td>
+				</tr>
+				<tr>
+					<td>Item2</td>
+					<td>Vis ac commodo adipiscing arcu aliquet.</td>
+					<td>19.99</td>
+				</tr>
+				<tr>
+					<td>Item3</td>
+					<td> Morbi faucibus arcu accumsan lorem.</td>
+					<td>29.99</td>
+				</tr>
+				<tr>
+					<td>Item4</td>
+					<td>Vitae integer tempus condimentum.</td>
+					<td>19.99</td>
+				</tr>
+				<tr>
+					<td>Item5</td>
+					<td>Ante turpis integer aliquet porttitor.</td>
+					<td>29.99</td>
+				</tr>
+			</tbody>
+			<tfoot>
+				<tr>
+					<td colspan="2"></td>
+					<td>100.00</td>
+				</tr>
+			</tfoot>
+		</table>
+	</div>
+</div>
+<div class="modal-footer">
+	<button type="button" class="btn btn-outline-dark" (click)="modal.close('Close click')">Close</button>
 </div>
