--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -14,5 +14,6 @@
 		</header>
 		<app-navbar></app-navbar>
 		<router-outlet></router-outlet>
+		<app-cookie-consent></app-cookie-consent>
 	</div>
 </div>
