feat: Added Content on index

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -4,7 +4,7 @@
 		<div id="modal"></div>
 		<!-- Header -->
 		<header id="header" class="alt">
-			<a href="/index" class="logo"><strong>E-Make</strong> <span>by AZkali</span></a>
+			<a href="/index" class="logo"><strong>E-Make</strong> <span>by Azkali</span></a>
 			<nav>
 				<button (click)="initCartModal()" id="cart-icon" [ngClass]="{pulse: cartFlash}"><span class="icon alt fa-shopping-cart"
 					 title="Cart"></span> {{(cartInfos | async).totalSum | currency:'€':'symbol':'1.2-2'}} ({{(cartInfos |
