--- a/front/src/app/pages/index/index.component.html
+++ b/front/src/app/pages/index/index.component.html
@@ -4,12 +4,15 @@
 	<section id="banner" class="major">
 		<div class="inner">
 			<header class="major">
-				<h1>Hi, my name is Forty</h1>
+				<h1>E-Make</h1>
 			</header>
 			<div class="content">
-				<p>A responsive site template designed by HTML5 UP<br />and released under the Creative Commons.</p>
+				<!--<p>A responsive site template designed by HTML5 UP<br />and released under the Creative Commons.</p>-->
+				<p>E-Make is a Social Marketplace for Makers. All of our products are being fully documented and meant to be made and improved by the users.
+				Also, we try our best to grow ourself around healthy ** such as recycling components and reworking them and encouraging you to do so by sending back your defectives products ( * bought from this shop ) to us, you will get a discount coupon for your next purchase.
+				If you want to buy rebranded components *for less than their original value*, select the *Reflowed* option on the product page, if it is in stock the option will be avaible otherwise you will not be able to select it</p>
 				<ul class="actions">
-					<li><a href="#one" class="button next scrolly">Get Started</a></li>
+					<li><a href="#one" class="button next scrolly">Go to the Shop</a></li>
 				</ul>
 			</div>
 		</div>
@@ -22,8 +25,8 @@
 				<img src="assets/images/pic01.jpg" alt="" />
 			</span>
 			<header class="major">
-				<h3><a routerLink="/shop" routerLinkActive="active" class="link">Aliquam</a></h3>
-				<p>Ipsum dolor sit amet</p>
+				<h3><a routerLink="/shop" routerLinkActive="active" class="link">*Temp* SBC + LCD Stand</a></h3>
+				<p>Take your SBC anywhere with you, and make it feel like a Laptop, a Desktop, a Handheld Gaming device and more</p>
 			</header>
 		</article>
 		<article>
@@ -31,8 +34,9 @@
 				<img src="assets/images/pic02.jpg" alt="" />
 			</span>
 			<header class="major">
-				<h3><a routerLink="/shop" routerLinkActive="active" class="link">Tempus</a></h3>
-				<p>feugiat amet tempus</p>
+				<h3><a routerLink="/shop" routerLinkActive="active" class="link">Grateful Grape</a></h3>
+				<p>A Mechanical (flexible ?) wireless keyboard, with USB C !</p>
+				<p>Meant to fit *Temp* SBC + LCD Stand</p>
 			</header>
 		</article>
 		<article>
@@ -40,8 +44,9 @@
 				<img src="assets/images/pic03.jpg" alt="" />
 			</span>
 			<header class="major">
-				<h3><a routerLink="/shop" routerLinkActive="active" class="link">Magna</a></h3>
-				<p>Lorem etiam nullam</p>
+				<h3><a routerLink="/shop" routerLinkActive="active" class="link">ESPI0</a></h3>
+				<p>The smallest A2DP-SINK module.</p>
+				<p>Built Around the infamous ESP32.</p>
 			</header>
 		</article>
 		<article>
@@ -49,8 +54,8 @@
 				<img src="assets/images/pic04.jpg" alt="" />
 			</span>
 			<header class="major">
-				<h3><a routerLink="/shop" routerLinkActive="active" class="link">Ipsum</a></h3>
-				<p>Nisl sed aliquam</p>
+				<h3><a routerLink="/shop" routerLinkActive="active" class="link">Neon Mango</a></h3>
+				<p>A Full DAC installation for the Raspberry Pi 2/3/3b+/3A+</p>
 			</header>
 		</article>
 		<article>
@@ -58,7 +63,7 @@
 				<img src="assets/images/pic05.jpg" alt="" />
 			</span>
 			<header class="major">
-				<h3><a routerLink="/shop" routerLinkActive="active" class="link">Consequat</a></h3>
+				<h3><a routerLink="/shop" routerLinkActive="active" class="link">High-Res Speaker</a></h3>
 				<p>Ipsum dolor sit amet</p>
 			</header>
 		</article>
@@ -67,22 +72,8 @@
 				<img src="assets/images/pic06.jpg" alt="" />
 			</span>
 			<header class="major">
-				<h3><a routerLink="/shop" routerLinkActive="active" class="link">Etiam</a></h3>
-				<p>Feugiat amet tempus</p>
+				<h3><a routerLink="/shop" routerLinkActive="active" class="link">Joyful Cerishes</a></h3>
+				<p>Basically Joy-Cons....</p>
 			</header>
 		</article>
 	</section>
-	
-	<!-- Two -->
-	<section id="two">
-		<div class="inner">
-			<header class="major">
-				<h2>Massa libero</h2>
-			</header>
-			<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-			<ul class="actions">
-				<li><a routerLink="/shop" routerLinkActive="active" class="button next">Get Started</a></li>
-			</ul>
-		</div>
-	</section>
-</div>
