feat: Added Cart display

--- a/front/src/app/pages/index/index.component.html
+++ b/front/src/app/pages/index/index.component.html
@@ -12,7 +12,7 @@
 				Also, we try our best to grow ourself around healthy ** such as recycling components and reworking them and encouraging you to do so by sending back your defectives products ( * bought from this shop ) to us, you will get a discount coupon for your next purchase.
 				If you want to buy rebranded components *for less than their original value*, select the *Reflowed* option on the product page, if it is in stock the option will be avaible otherwise you will not be able to select it</p>
 				<ul class="actions">
-					<li><a href="#one" class="button next scrolly">Go to the Shop</a></li>
+					<li><a routerLink="/shop" class="button next scrolly">Go to the Shop</a></li>
 				</ul>
 			</div>
 		</div>
