--- a/front/src/app/pages/shop/cart/cart.component.html
+++ b/front/src/app/pages/shop/cart/cart.component.html
@@ -10,39 +10,20 @@
 						<th>Name</th>
 						<th>Description</th>
 						<th>Price</th>
+						<th>Another One</th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr>
-						<td>Item1</td>
-						<td>Ante turpis integer aliquet porttitor.</td>
-						<td>29.99</td>
-					</tr>
-					<tr>
-						<td>Item2</td>
-						<td>Vis ac commodo adipiscing arcu aliquet.</td>
-						<td>19.99</td>
-					</tr>
-					<tr>
-						<td>Item3</td>
-						<td> Morbi faucibus arcu accumsan lorem.</td>
-						<td>29.99</td>
-					</tr>
-					<tr>
-						<td>Item4</td>
-						<td>Vitae integer tempus condimentum.</td>
-						<td>19.99</td>
-					</tr>
-					<tr>
-						<td>Item5</td>
-						<td>Ante turpis integer aliquet porttitor.</td>
-						<td>29.99</td>
+					<tr [ngClass]="{pulse: cartFlash}" *ngFor="let item of (cartInfos | async).items">
+						<th>{{item.item.product.name}}</th>
+						<th>{{item.unitPrice}}</th>
+						<th>{{item.count}}</th>
 					</tr>
 				</tbody>
 				<tfoot>
 					<tr>
 						<td colspan="2"></td>
-						<td>100.00</td>
+						<td [ngClass]="{pulse: cartFlash}" >{{(cartInfos | async).totalSum | currency:'€':'symbol':'1.2-2'}}</td>
 					</tr>
 				</tfoot>
 			</table>
