--- a/front/src/app/components/cookie-consent/cookie-consent.component.html
+++ b/front/src/app/components/cookie-consent/cookie-consent.component.html
@@ -1,11 +1,12 @@
 <div class="cookie-law-wrapper"
 [@transition]="transition"
-(@transition.done)="afterDismissAnimation($event)">
+(@transition.done)="afterDismissAnimation($event)"
+[ngStyle]="{bottom:bottomPos}">
 
-<div class="copy">
-	<span #ref>
-		This website use browser's storage.
-		<a (click)="showDetails = true">Read more</a>
+<div class="copy" #copy>
+	<span>
+		This website requests to store informations in your browser.
+		<a (click)="showDetails = !showDetails" class="showDetails">Read more</a>
 	</span>
 	
 	<div class="button-group">
@@ -14,15 +15,21 @@
 	</div>
 </div>
 
-<div id="details" [ngStyle]="{'margin-bottom': detailsMargin}" #details>
+<div id="details" #details>
 	<section>
-		<p class="title">ApiDoc caching</p>
-		<input type="checkbox" [(ngModel)]="consentMatrice.apiDoc"/>
-		<p class="desc">This greatly improves API load time by storing it after download. Since API doc files are about 1Mb, reloading it may slow down your navigation. It does not store any personal informations.</p>
+		<input type="checkbox" checked disabled id="cookie-session"/><label for="cookie-session">Session</label>
+		<p class="desc">Keeps informations about your session (this is required to log in)</p>
 	</section>
 	<section>
-		<p class="title">Tracking</p>
-		<input type="checkbox" [(ngModel)]="consentMatrice.tracking"/>
-		<p class="desc">Use a tracker to analyze your navigation. It may help us to know which part of the doc to work on in priority.</p>
+		<input type="checkbox" [(ngModel)]="consentMatrice.localCart" id="cookie-localCart"/><label for="cookie-localCart">Local Cart</label>
+		<p class="desc">Store the cart in the browser while you are not connected</p>
+	</section>
+	<section>
+		<input type="checkbox" [(ngModel)]="consentMatrice.tracking" id="cookie-tracking"/><label for="cookie-tracking">Tracking</label>
+		<p class="desc">Use a tracker to analyze your navigation. It may help us to know which part of the site to work on in priority.</p>
+	</section>
+	<section>
+		<input type="checkbox" [(ngModel)]="consentMatrice.doNotBother" id="cookie-bother"/><label for="cookie-bother">Save preferences</label>
+		<p class="desc">If all optional cookies above are disabled, this option saves an extra cookie to disable the display of this cookie prompt.</p>
 	</section>
 </div>
