--- a/front/src/app/components/cookie-consent/cookie-consent.component.scss
+++ b/front/src/app/components/cookie-consent/cookie-consent.component.scss
@@ -1,20 +1,26 @@
-$backCookieConsent: #333;
+@import '../../../styles/sass/libs/vars';
+@import '../../../styles/sass/breakpoints.scss';
+@import '../../../styles/sass/libs/functions';
+
+
+$backCookieConsent: _palette(bg-alt);
 
 .cookie-law-wrapper {
 	background: $backCookieConsent;
 	color: #bbb;
 	display: block;
 	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
-	font-size: 15px;
+	//font-size: 15px;
 	font-weight: 200;
-	line-height: 20px;
+	line-height: 30px;
 	position: fixed;
-	bottom: 0;
+	bottom: -100%;
 	left: 0;
 	width: 100%;
 	z-index: 999999999;
 	font-smooth: always;
 	-webkit-font-smoothing: antialiased;
+	transition: 0.3s bottom;
 }
 
 .cookie-law-wrapper a {
@@ -45,6 +51,8 @@ $backCookieConsent: #333;
 	.copy {
 		display: flex;
 		align-items: center;
+		flex-direction: column;
+		font-size: 16px;
 	}
 	span {
 		color: #fff;
@@ -60,56 +68,68 @@ $backCookieConsent: #333;
 	}
 }
 #details{
-	transition: 0.3s margin-bottom;
 	display: flex;
-	flex-direction: row;
-
+	flex-direction: column;
+	
 	> *{
 		flex: 1 1 0;
 		padding: 0 15px;
 	}
-	.title{
-		font-size: 1.3em;
-		text-align: center;
-	}
-	input{
-		float: left;
-		margin-right: 15px;
-	}
 }
 .copy, #details {
+	padding: 10px 30px;
 	box-sizing: border-box;
-	padding: 10px 60px 10px 10px;
 }
 
 
 .cookie-law-wrapper .copy a {
 	text-decoration: underline;
+	
+	&:active, &:hover {
+		outline: 0;
+	}
 }
 
-.cookie-law-wrapper .copy a:active, .copy a:hover {
-	outline: 0;
+.showDetails{
+	cursor: pointer;
 }
 
-@media (min-width: 600px) {
+
+@include breakpoint('>=medium') {
+	#details{
+		flex-direction: row;
+	}
+}
+@include breakpoint('>=large') {
 	/* For bigger devices: */
-	.cookie-law-wrapper .copy {
-		padding: 20px 60px 20px 20px;
-		font-size: 18px;
-		line-height: 24px;
-	}
-	
-	.cookie-law-wrapper .dismiss {
-		top: 10px;
-		right: 15px;
-	}
-	
-	.cookie-law-wrapper .dismiss svg {
-		width: 24px;
-		height: 24px;
+	.cookie-law-wrapper {
+		.copy {
+			line-height: 24px;
+			flex-direction: row;
+			padding: 20px 60px 20px 20px;
+			
+			.dismiss {
+				top: 10px;
+				right: 15px;
+				
+				svg {
+					width: 24px;
+					height: 24px;
+				}
+			}
+		}		
 	}
 }
 
 .details {
 	display: none;
+}
+
+
+input[type="checkbox"]{
+	&:disabled{
+		& + label::before {
+			background: _palette(fg-light);
+		}
+	}
 }
