--- a/front/src/app/pages/shop/cart/cart.component.scss
+++ b/front/src/app/pages/shop/cart/cart.component.scss
@@ -7,7 +7,7 @@
 	/* Could be more or less, depending on screen size */
 	box-shadow: 0 4px 8px 0 rgba(42, 47, 74, 0.2), 0 6px 20px 0 rgba(42, 47, 74, 0.19);
 	background-color: #2A2F4A !important;
-
+	
 }
 
 .sample-text {
@@ -26,7 +26,7 @@
 	font-size: 28px;
 	font-weight: bold;
 	background-color: #2A2F4A !important;
-
+	
 }
 
 .sample-close button:hover,
@@ -34,4 +34,20 @@
 	color: black;
 	text-decoration: none;
 	cursor: pointer;
+}
+
+
+
+
+.sub-attr-row {
+	font-size: 0.9em;
+	font-style: italic;
+	border: none;
+	
+	td{
+		padding: 0.60em;
+	}
+}
+.product-row{
+	border-bottom: none;
 }
