--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Menu -->
-<nav id="menu">
+<nav id="menu" *ngIf="nav.visible">
 	<ul class="links">
 		<li><a routerLink="/index" routerLinkActive="active">Home</a></li>
 		<li><a routerLink="/shop" routerLinkActive="active">Products</a></li>
@@ -8,6 +8,6 @@
 	</ul>
 	<ul class="actions stacked">
 		<li><a href="#" class="button primary fit">Get Started</a></li>
-		<li><a href="#" class="button fit">Log In</a></li>
+		<li><button (click)="initLoginModal(); hideNav()" class="button fit">Log In</button></li>
 	</ul>
 </nav>
