--- a/front/src/app/pages/shop/cart/cart.component.scss
+++ b/front/src/app/pages/shop/cart/cart.component.scss
@@ -1,53 +1,86 @@
-.sample-container {
-	margin: 15% auto;
-	/* 15% from the top and centered */
-	padding: 20px;
-	border: 1px solid #888;
-	width: 80%;
-	/* Could be more or less, depending on screen size */
-	box-shadow: 0 4px 8px 0 rgba(42, 47, 74, 0.2), 0 6px 20px 0 rgba(42, 47, 74, 0.19);
-	background-color: #2A2F4A !important;
-	
-}
+/* Modal Header */
 
-.sample-text {
+/*.modal-header {
+	padding: 2px 16px;*/
+	//background-color: #5cb85c;
+	/*color: white;
+}*/
+
+/* Modal Body */
+/*
+.modal-body {
+	padding: 2px 16px;
+}*/
+
+/* Modal Footer */
+
+//.modal-footer {}
+
+/*.modal-container {
+	margin: 10% auto;*/
+	/* 15% from the top and centered */
+	/*padding: 20px;
+	border: 1px solid #888;
+	width: 80%;*/
+	/* Could be more or less, depending on screen size */
+	/*box-shadow: 0 4px 8px 0 rgba(42, 47, 74, 0.2), 0 6px 20px 0 rgba(42, 47, 74, 0.19);
+	background-color: #2A2F4A !important;
+}*/
+
+/*.modal-text {
 	color: white;
 	font-size: 20px;
 	text-align: center;
-}
+}*/
 
-.sample-close {
+.modal-close {
 	text-align: center;
 }
 
-.sample-close button {
+.modal-close button {
 	color: #aaa;
 	float: right;
 	font-size: 28px;
 	font-weight: bold;
 	background-color: #2A2F4A !important;
-	
 }
 
-.sample-close button:hover,
-.sample-close button:focus {
+.modal-close button:hover,
+.modal-close button:focus {
 	color: black;
 	text-decoration: none;
 	cursor: pointer;
 }
 
+.modal-add {
+	text-align: center;
+}
 
+.modal-add button {
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+	background-color: #2A2F4A !important;
+	margin-right: 10px;
+}
 
+.modal-add button:hover,
+.modal-add button:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
 
 .sub-attr-row {
 	font-size: 0.9em;
 	font-style: italic;
 	border: none;
-	
-	td{
+	td {
 		padding: 0.60em;
 	}
 }
-.product-row{
+
+.product-row {
 	border-bottom: none;
 }
