feat(Shop/Cart): Implemented remove/change count of items, styles improvements
Closes #1

--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -53,4 +53,9 @@ $pulse-rest: 2em;
 	z-index: 99;
 	background-color: rgb(0, 0, 0);
 	background-color: rgba(0, 0, 0, 0.7);
+	bottom: 0;
+	flex-direction: column;
+	justify-content: center;
+	align-items: stretch;
+	overflow: auto;
 }
