--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <!-- Menu -->
 <nav id="menu" *ngIf="nav.visible">
 	<ul class="links">
-		<li><a routerLink="/index" routerLinkActive="active">Home</a></li>
-		<li><a routerLink="/shop" routerLinkActive="active">Products</a></li>
-		<li><a routerLink="/blog" routerLinkActive="active">Blog</a></li>
-		<li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
+		<li><a [routerLink]="['index']">Home</a></li>
+		<li><a [routerLink]="['shop']">Products</a></li>
+		<li><a [routerLink]="['blog']">Blog</a></li>
+		<li><a [routerLink]="['contact']">Contact</a></li>
 	</ul>
 	<ul class="actions stacked">
 		<li><a href="#" class="button primary fit">Get Started</a></li>
