--- a/front/src/app/pages/shop/product-details/product-details.component.html
+++ b/front/src/app/pages/shop/product-details/product-details.component.html
@@ -27,6 +27,12 @@
 				</header>
 				
 				<table class="wide-only">
+					<tr>
+						<td>Base of <em>{{productResolved?.name}}</em></td>
+						<td class="smallest">1</td>
+						<td style="text-align:right">{{productResolved?.basePrice | currency:'€':'symbol':'1.2-2'}}</td>
+						<td class="smallest"></td>
+					</tr>
 					<tr *ngFor="let part of productResolved?.customizableParts">
 						<td>{{part.name}} ({{part.category.name}})</td>
 						<td class="smallest">{{part.factor}}</td>
@@ -37,6 +43,10 @@
 			</ng-container>
 			
 			<section class="small-only" id="customize-small">
+				<div>
+					<p>1 * base of <em>{{productResolved?.name}}</em></p>
+					<p>{{productResolved?.basePrice | currency:'€':'symbol':'1.2-2'}}</p>
+				</div>
 				<div *ngFor="let part of productResolved?.customizableParts">
 					<p>{{part.factor}} * {{part.name}} ({{part.category.name}})</p>
 					<p><ng-container [ngTemplateOutlet]="attrSelect" [ngTemplateOutletContext]="{part:part}"></ng-container></p>
