--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,16 @@
 <!-- Menu -->
-<nav id="menu" *ngIf="nav.visible">
-	<ul class="links">
-		<li><a [routerLink]="['index']">Home</a></li>
-		<li><a [routerLink]="['shop']">Products</a></li>
-		<li><a [routerLink]="['blog']">Blog</a></li>
-		<li><a [routerLink]="['contact']">Contact</a></li>
-	</ul>
-	<ul class="actions stacked">
-		<li><a href="#" class="button primary fit">Get Started</a></li>
-		<li><button (click)="initLoginModal(); hideNav()" class="button fit">Log In</button></li>
-	</ul>
+<nav id="menu">
+	<section class="inner">
+		<ul class="links">
+			<li><a [routerLink]="['index']">Home</a></li>
+			<li><a [routerLink]="['shop']">Products</a></li>
+			<li><a [routerLink]="['blog']">Blog</a></li>
+			<li><a [routerLink]="['contact']">Contact</a></li>
+		</ul>
+		<ul class="actions stacked">
+			<li><a href="#" class="button primary fit">Get Started</a></li>
+			<li><button (click)="close()" class="button fit">Log In</button></li>
+		</ul>
+	</section>
+	<button class="close no-border no-hover" (click)="close()">Close</button>
 </nav>
