--- a/front/src/styles/sass/layout/_menu.scss
+++ b/front/src/styles/sass/layout/_menu.scss
@@ -6,12 +6,7 @@
 
 /* Menu */
 
-	#menu {
-		@include vendor('transition', (
-			'transform #{_duration(menu)} ease',
-			'opacity #{_duration(menu)} ease',
-			'visibility #{_duration(menu)}'
-		));
+	#modal {
 		@include vendor('align-items', 'center');
 		@include vendor('display', 'flex');
 		@include vendor('justify-content', 'center');
@@ -32,17 +27,17 @@
 		.inner {
 			@include vendor('transition', (
 				'transform #{_duration(menu)} ease-out',
-				'opacity #{_duration(menu)} ease',
-				'visibility #{_duration(menu)}'
+				//'opacity #{_duration(menu)} ease',
+				//'visibility #{_duration(menu)}'
 			));
 			@include vendor('transform', 'rotateX(20deg)');
 			-webkit-overflow-scrolling: touch;
 			max-width: 100%;
 			max-height: 100vh;
-			opacity: 0;
+			// opacity: 0;
 			overflow: auto;
 			text-align: center;
-			visibility: hidden;
+			// visibility: hidden;
 			width: 18em;
 
 			> :first-child {
@@ -140,25 +135,11 @@
 	}
 
 	body.is-ie {
-		#menu {
+		#modal {
 			background: transparentize(_palette(bg-alt), 0.025);
 		}
 	}
 
-	body.is-menu-visible {
-		#wrapper {
-			@include vendor('filter', 'blur(0.5em)');
-		}
-
-		#menu {
-			@include vendor('pointer-events', 'auto');
-			opacity: 1;
-			visibility: visible;
-
-			.inner {
-				@include vendor('transform', 'none');
-				opacity: 1;
-				visibility: visible;
-			}
-		}
+	.blurred {
+		@include vendor('filter', 'blur(0.5em)');
 	}
