--- a/front/src/app/pages/login/login.component.html
+++ b/front/src/app/pages/login/login.component.html
@@ -1,30 +1,20 @@
 
-<div class="w3-container">
-
-	<div class="w3-modal">
-		
-		
-		<div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
-				<div class="w3-center"><br>
-					<span (click)="close()" class="btn w3-xlarge w3-red w3-hover-light-grey w3-display-topright" title="Close Modal">&times;</span>
-					<img src="https://www.w3schools.com/w3css/img_avatar4.png" alt="Avatar" style="width:30%" class="w3-circle w3-margin-top">
-				</div>
-				
-				<form>
-					<div class="w3-section">
-						<label><b>Username</b></label>
-						<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" name="usrname" required>
-						<label><b>Password</b></label>
-						<input class="w3-input w3-border" type="password" placeholder="Enter Password" name="psw" required>
-						<button class="w3-button w3-block w3-green w3-section w3-padding" type="submit">Login</button>
-						<input class="w3-check w3-margin-top" type="checkbox" checked="checked"> Remember me
-					</div>
-				</form>
-				
-				<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-					<button (click)="close()" type="button" class="w3-button w3-red">Cancel</button>
-					<span class="w3-right w3-padding ">Forgot <a href="#">password?</a></span>
-				</div>
-			</div>
+<div class="modal-container inner">
+	<div class="modal-header">
+		<h4 class="modal-title">Log in</h4>
+	</div>
+	
+	<div class="modal-text">
+		<a href="getLoginUrl('google')"><i class="alt fab fa-google"></i></a>
+		<label><b>Username</b></label>
+		<input type="text" placeholder="Enter Username" name="usrname" required>
+		<label><b>Password</b></label>
+		<input type="password" placeholder="Enter Password" name="psw" required>
+		<button type="submit">Login</button>
+		<input type="checkbox" checked="checked"> Remember me
+		<div>
+			<button (click)="close()" type="button">Cancel</button>
+			<span>Forgot <a href="#">password?</a></span>
 		</div>
 	</div>
+</div>
