--- a/front/src/app/pages/shop/cart/cart.component.html
+++ b/front/src/app/pages/shop/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="modal-container">
+<div class="modal-container inner">
 
 	<div class="modal-header">
 		<h4 class="modal-title">Your Cart</h4>
@@ -54,6 +54,7 @@
 		</div>
 	</div>
 </div>
+<button class="close no-border no-hover" (click)="close()">Close</button>
 
 <ng-template #brokenRef>
 	<td><i class="icon fa-times"></i> Broken reference...</td>
