--- a/front/src/app/pages/shop/cart/cart.component.scss
+++ b/front/src/app/pages/shop/cart/cart.component.scss
@@ -37,19 +37,18 @@
 	text-align: center;
 }
 
-.modal-close button {
+.modal-close button, .modal-add button {
 	color: #aaa;
 	float: right;
-	font-size: 28px;
 	font-weight: bold;
 	background-color: #2A2F4A !important;
-}
-
-.modal-close button:hover,
-.modal-close button:focus {
-	color: black;
-	text-decoration: none;
-	cursor: pointer;
+	
+	&:hover,
+	&:focus {
+		color: black;
+		text-decoration: none;
+		cursor: pointer;
+	}
 }
 
 .modal-add {
@@ -57,11 +56,6 @@
 }
 
 .modal-add button {
-	color: #aaa;
-	float: right;
-	font-size: 28px;
-	font-weight: bold;
-	background-color: #2A2F4A !important;
 	margin-right: 10px;
 }
 
