feat: New config format, implemented login & token broadcast

--- a/front/src/app/pages/login/login.component.html
+++ b/front/src/app/pages/login/login.component.html
@@ -5,7 +5,7 @@
 	</div>
 	
 	<div class="modal-text">
-		<a href="getLoginUrl('google')"><i class="alt fab fa-google"></i></a>
+		<a [href]="getLoginUrl('google')" target="_blank"><i class="alt fab fa-google"></i></a>
 		<label><b>Username</b></label>
 		<input type="text" placeholder="Enter Username" name="usrname" required>
 		<label><b>Password</b></label>
