feat(Shop/Cart): Ensure user is logged in before trying to submit an order

--- a/front/src/app/pages/shop/cart/cart.component.html
+++ b/front/src/app/pages/shop/cart/cart.component.html
@@ -50,7 +50,7 @@
 			<button type="button" class="btn btn-outline-dark" (click)="close()">Close</button>
 		</div>
 		<div class="modal-add">
-			<button type="button" class="btn btn-outline-dark" (click)="close()">Buy</button>
+			<button type="button" class="btn btn-outline-dark" (click)="buy()">Buy</button>
 		</div>
 	</div>
 </div>
