feat(footer): Added footer, rework (s)css, removed unused content

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -17,4 +17,5 @@
 	[@changeStateDisplay]="state"
 	(@changeStateOpacity.done)="modalAnimDone($event)"></div>
 </div>
+<app-footer></app-footer>
 <app-cookie-consent></app-cookie-consent>
