--- a/front/src/app/pages/blog/blog.component.html
+++ b/front/src/app/pages/blog/blog.component.html
@@ -1,4 +1,21 @@
-<article *ngFor="let article of tree | async">
-	<h1>{{article.title}}</h1>
-	<showdown [value]="article.summary"></showdown>
-</article>
+<div *ngFor="let article of tree | async">
+	<hr class="major"/>
+	<article>
+		<header class="major">
+			<h1>{{article.title}}</h1>
+		</header>
+		<showdown [value]="article.summary"></showdown>
+	</article>
+</div>
+<hr class="major"/>
+<ul class="pagination">
+	<li><span class="button small disabled">Prev</span></li>
+	<li><a href="#" class="page active">1</a></li>
+	<li><a href="#" class="page">2</a></li>
+	<li><a href="#" class="page">3</a></li>
+	<li><span>&hellip;</span></li>
+	<li><a href="#" class="page">8</a></li>
+	<li><a href="#" class="page">9</a></li>
+	<li><a href="#" class="page">10</a></li>
+	<li><a href="#" class="button small">Next</a></li>
+</ul>
