--- a/front/src/app/pages/shop/shop.component.html
+++ b/front/src/app/pages/shop/shop.component.html
@@ -10,9 +10,9 @@
 			<header class="major">
 				<h1 class="text-center">Shop</h1>
 			</header>
-			<div class="content">
+			<!--<div class="content">
 				<p>This is the Shop !</p>
-			</div>
+			</div>-->
 		</div>
 	</section>
 
@@ -40,4 +40,7 @@
 			<p>Accessories *Category Separation*</p>
 		</div>
 	</section>
+<!--<section id="two" class="spotlights">
+		<app-product *ngFor="let attribute of attributes | async" [attribute]="attribute"></app-product>
+	</section>-->
 </section>
