--- a/front/src/app/elements.html
+++ b/front/src/app/elements.html
@@ -9,8 +9,8 @@
 		<title>Elements - Forty by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://html5up.net/uploads/demos/forty/assets/style.css" />
+		<noscript><link rel="stylesheet" href="https://html5up.net/uploads/demos/forty/assets/css/noscript.scss" /></noscript>
 	</head>
 	<body class="is-preload">
 
