--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -46,3 +46,24 @@ $pulse-rest: 2em;
 		opacity: 0;
 	}
 }
+
+
+:host{
+	min-height: 100vh;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+}
+
+
+.is-preload{
+	flex: 1 1 auto;
+	display: flex;
+	flex-direction: column;
+}
+
+#wrapper{
+	flex: 1 1 100%;
+}
