feat: 🎸 Added fields on order form
Order form is now a page, instead of a modal. The form service is OK.

--- a/front/src/styles/sass/components/_form.scss
+++ b/front/src/styles/sass/components/_form.scss
@@ -167,6 +167,8 @@
 			position: relative;
 
 			&:before {
+				font-family: "Font Awesome 5 Free";
+				font-weight: 900;
 				background: _palette(border-bg);
 				content: '';
 				display: inline-block;
