--- a/front/src/app/modals/cart/cart.component.html
+++ b/front/src/app/modals/cart/cart.component.html
@@ -5,46 +5,7 @@
 	</div>
 
 	<div class="modal-text">
-		<div class="table-wrapper" *ngIf="(cartInfos | async).totalCount > 0; else emptyCart">
-			<table>
-				<thead>
-					<tr>
-						<th>Name</th>
-						<th>Count</th>
-						<th>Unit price</th>
-						<th>Total price</th>
-					</tr>
-				</thead>
-				<tbody>
-					<ng-container *ngFor="let cartItem of (cartInfos | async).items; trackBy: trackCartItem">
-						<tr [ngClass]="{'product-row': cartItem.item.productUid, 'attribute-row': cartItem.item.attributeUid}">
-							<td *ngIf="cartItem.item.product || cartItem.item.attribute; else brokenRef">{{(cartItem.item.product ||
-								cartItem.item.attribute)?.name}}</td>
-							<td><input [(ngModel)]="cartItem.count" type="number" min="1" (change)="setCartItemCount(cartItem, cartItem.count)" /></td>
-							<td>{{cartItem.unitPrice | currency:'€':'symbol':'1.2-2'}}</td>
-							<td>{{cartItem.count * cartItem.unitPrice | currency:'€':'symbol':'1.2-2'}}</td>
-							<td><button class="button" title="Remove this item" (click)="deleteCartItem(cartItem)"><i class="fa fa-times"></i></button></td>
-						</tr>
-						<ng-container *ngIf="cartItem.item.productUid">
-							<tr *ngFor="let attribute of cartItem.item.attributes | keyvalue" class="sub-attr-row">
-								<td>{{attribute.key}}</td>
-								<td *ngIf="attribute.value; else brokenRef">{{attribute.value?.name}}</td>
-								<td>{{ attribute.value?.price | currency:'€':'symbol':'1.2-2'}}</td>
-								<td></td>
-								<td></td>
-							</tr>
-						</ng-container>
-					</ng-container>
-				</tbody>
-				<tfoot>
-					<tr>
-						<td colspan="3"></td>
-						<td>{{(cartInfos | async).totalSum | currency:'€':'symbol':'1.2-2'}}</td>
-					</tr>
-				</tfoot>
-			</table>
-		</div>
-		<ng-template #emptyCart><p>Your cart is empty. Go to the <a [routerLink]="['/shop']">shop</a> to find what you want !</p></ng-template>
+		<app-cart-review></app-cart-review>
 	</div>
 	<div class="modal-footer">
 		<div class="modal-close">
@@ -56,7 +17,3 @@
 	</div>
 </div>
 <button class="close no-border no-hover" (click)="close()">Close</button>
-
-<ng-template #brokenRef>
-	<td><i class="fa fa-times"></i> Broken reference...</td>
-</ng-template>
