feat: 🎸 Added LoggedIn guard, auto redirect to page after login
The LoginComponent modal automatically closes itself on login signal.
The login service redirects to the last requested route upon login. The
LoggedIn guard keep track of the requested route in case of access deny.

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -13,8 +13,8 @@
 		<router-outlet></router-outlet>
 	</div>
 	<div id="modal"
-	[@changeStateOpacity]="(state | async).visibilityState"
-	[@changeStateDisplay]="(state | async).visibilityState"
+	[@changeStateOpacity]="(state | async)?.visibilityState || 'hidden'"
+	[@changeStateDisplay]="(state | async)?.visibilityState || 'hidden'"
 	(@changeStateOpacity.done)="modalAnimDone($event)"></div>
 </div>
 <app-footer></app-footer>
