--- a/front/src/app/pages/order-form/order-form.component.html
+++ b/front/src/app/pages/order-form/order-form.component.html
@@ -41,32 +41,32 @@
 						
 						<div class="row gtr-uniform">
 							<div class="col-6 col-12-xsmall">
-								<app-field [field]="fieldsBilling.firstname" [form]="formBilling"></app-field>
+								<app-field [field]="fieldsBilling.firstname" key="firstname" [form]="formBilling"></app-field>
 							</div>
 							<div class="col-6 col-12-xsmall">
-								<app-field [field]="fieldsBilling.lastname" [form]="formBilling"></app-field>
+								<app-field [field]="fieldsBilling.lastname" key="lastname" [form]="formBilling"></app-field>
 							</div>
 							<div class="col-12">
-								<app-field [field]="fieldsBilling.email" [form]="formBilling"></app-field>
+								<app-field [field]="fieldsBilling.email" key="email" [form]="formBilling"></app-field>
 							</div>
 							<div class="col-12">
-								<app-field [field]="fieldsBilling.phone" [form]="formBilling"></app-field>
+								<app-field [field]="fieldsBilling.phone" key="phone" [form]="formBilling"></app-field>
 							</div>
 							
 							<div class="col-12">
-								<app-field [field]="fieldsBilling.addr1" [form]="formBilling"></app-field>
+								<app-field [field]="fieldsBilling.addr1" key="addr1" [form]="formBilling"></app-field>
 							</div>
 							<div class="col-12">
-								<app-field [field]="fieldsBilling.addr2" [form]="formBilling"></app-field>
+								<app-field [field]="fieldsBilling.addr2" key="addr2" [form]="formBilling"></app-field>
 							</div>
 							<div class="col-12">
-								<app-field [field]="fieldsBilling.city" [form]="formBilling"></app-field>
+								<app-field [field]="fieldsBilling.city" key="city" [form]="formBilling"></app-field>
 							</div>
 							<div class="col-6 col-12-xsmall">
-								<app-field [field]="fieldsBilling.postalCode" [form]="formBilling"></app-field>
+								<app-field [field]="fieldsBilling.postalCode" key="postalCode" [form]="formBilling"></app-field>
 							</div>
 							<div class="col-6 col-12-xsmall">
-								<app-field [field]="fieldsBilling.country" [form]="formBilling"></app-field>
+								<app-field [field]="fieldsBilling.country" key="country" [form]="formBilling"></app-field>
 							</div>
 						</div>
 					</div>
@@ -77,32 +77,32 @@
 						
 						<div class="row gtr-uniform">
 							<div class="col-6 col-12-xsmall">
-								<app-field [field]="fieldsShipping.firstname" [form]="formShipping"></app-field>
+								<app-field [field]="fieldsShipping.firstname" key="firstname" [form]="formShipping"></app-field>
 							</div>
 							<div class="col-6 col-12-xsmall">
-								<app-field [field]="fieldsShipping.lastname" [form]="formShipping"></app-field>
+								<app-field [field]="fieldsShipping.lastname" key="lastname" [form]="formShipping"></app-field>
 							</div>
 							<div class="col-12">
-								<app-field [field]="fieldsShipping.email" [form]="formShipping"></app-field>
+								<app-field [field]="fieldsShipping.email" key="email" [form]="formShipping"></app-field>
 							</div>
 							<div class="col-12">
-								<app-field [field]="fieldsShipping.phone" [form]="formShipping"></app-field>
+								<app-field [field]="fieldsShipping.phone" key="phone" [form]="formShipping"></app-field>
 							</div>
 							
 							<div class="col-12">
-								<app-field [field]="fieldsShipping.addr1" [form]="formShipping"></app-field>
+								<app-field [field]="fieldsShipping.addr1" key="addr1" [form]="formShipping"></app-field>
 							</div>
 							<div class="col-12">
-								<app-field [field]="fieldsShipping.addr2" [form]="formShipping"></app-field>
+								<app-field [field]="fieldsShipping.addr2" key="addr2" [form]="formShipping"></app-field>
 							</div>
 							<div class="col-12">
-								<app-field [field]="fieldsShipping.city" [form]="formShipping"></app-field>
+								<app-field [field]="fieldsShipping.city" key="city" [form]="formShipping"></app-field>
 							</div>
 							<div class="col-6 col-12-xsmall">
-								<app-field [field]="fieldsShipping.postalCode" [form]="formShipping"></app-field>
+								<app-field [field]="fieldsShipping.postalCode" key="postalCode" [form]="formShipping"></app-field>
 							</div>
 							<div class="col-6 col-12-xsmall">
-								<app-field [field]="fieldsShipping.country" [form]="formShipping"></app-field>
+								<app-field [field]="fieldsShipping.country" key="country" [form]="formShipping"></app-field>
 							</div>
 						</div>
 					</div>
