feat: 🎸 Added extra fields on order form

--- a/front/src/app/pages/order-form/order-form.component.html
+++ b/front/src/app/pages/order-form/order-form.component.html
@@ -108,6 +108,25 @@
 					</div>
 				</div>
 			</div>
+			
+			<div class="inner">
+				<div class="row gtr-uniform">
+					<div class="col-6">
+						<app-field [field]="fieldsExtra.copyToUser" key="copyToUser" [form]="formExtra"></app-field>
+					</div>
+					<div class="col-6">
+						<app-field [field]="fieldsExtra.subscribeNews" key="subscribeNews" [form]="formExtra"></app-field>
+					</div>
+				</div>
+			</div>
+			
+			<div class="inner">
+				<div class="row gtr-uniform">
+					<div class="col-12">
+						<app-field [field]="fieldsExtra.message" key="message" [form]="formExtra"></app-field>
+					</div>
+				</div>
+			</div>
 		</section>
 		
 		<section id="three">
